--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,12 @@
     "i18next": "^17.3.1",
     "i18next-browser-languagedetector": "^4.1.1",
     "i18next-xhr-backend": "^3.2.0",
+    "immer": "^7.0.14",
     "js-file-download": "^0.4.12",
     "moment": "2.24.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-data-grid": "^6.1.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^10.13.2",
@@ -39,7 +41,7 @@
     "react-proptypes": "^1.0.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "react-spinners": "^0.6.1",
     "yup": "^0.27.0"
   },
@@ -53,9 +55,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "devDependencies": {
