--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "moment": "2.24.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-data-grid": "^6.1.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^10.13.2",
@@ -53,6 +54,7 @@
       "not op_mini all"
     ],
     "development": [
+      "ie 11",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
